fix(menu nav): app install button styles on dark mode

--- a/src/styles/components/_menu-nav.scss
+++ b/src/styles/components/_menu-nav.scss
@@ -58,6 +58,11 @@
 
       border: none;
       font-size: inherit;
+      background: none;
+
+      &:hover {
+        box-shadow: none;
+      }
     }
   }
 
